--- a/#dev/scss/global/_base.scss
+++ b/#dev/scss/global/_base.scss
@@ -36,8 +36,8 @@ h4,
 
 h5,
 .h5 {
-	font-size: 14px;
-	line-height: 21px;
+	font-size: 20px;
+	line-height: 27px;
 	margin: 0 0 30px;
 	font-weight: normal;
 	color: inherit;
@@ -45,8 +45,8 @@ h5,
 
 h6,
 .h6 {
-	font-size: 12px;
-	line-height: 18px;
+	font-size: 18px;
+	line-height: 24px;
 	margin: 0 0 30px;
 	font-weight: normal;
 	color: inherit;
